--- a/src/components/about-us/about-us.styles.scss
+++ b/src/components/about-us/about-us.styles.scss
@@ -11,14 +11,27 @@
             height: 100%;
     }
     }
-    .p1 {
-        font-size: 16px;
-        margin-top: 220px;
-        margin-left: 50px;
-        margin-right: 30px;
-        color: #707070;
-
+    .paragraph {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        .p2 {
+            font-size: 16px;
+            color: #707070;
+            margin-left: 50px;
+            margin-right: 30px;
+            margin-top: 100px;
+        }
+        .p1 {
+            font-size: 16px;
+            color: #707070;
+            margin-left: 50px;
+            margin-right: 30px;
+            margin-top: 230px;
+        }
     }
+
     .image-two-container {
         width: 100%;
         height: 307px;
@@ -33,9 +46,5 @@
         font-size: 16px;
         margin-top: 80px;
         color: #707070;
-        margin-left: 50px;
-        margin-right: 30px;
-
-
     }
 }
