--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -25,7 +25,7 @@ $btn-shadow: 3px 3px 20px $primary-blue;
     height: 100%;
     background-color: #274596;
     
-    .form {
+    .message-form {
         margin-top: 50px;
         margin-left: 5rem;
     }
