--- a/src/pages/article-car-page/article-car.styles.scss
+++ b/src/pages/article-car-page/article-car.styles.scss
@@ -1,3 +1,34 @@
+
 .article-car-page {
     font-family: 'Rubik', sans-serif;
+    background-attachment: fixed;
+
+    .car-image {
+        width: 100%;
+        height: 100%;
+    }
+
+    .article-body {
+        margin-left: 70px;
+        margin-right: 70px;
+        margin-top: 70px;
+        margin-bottom: 50px;
+
+        // transform-style: preserve-3d;
+        // overflow-y: scroll;
+        // overflow-x: hidden;
+
+        p {
+            font-size: 16px;
+            color: #707070;
+            line-height: 40px;
+            .beginning {
+                color: #006AD8;
+                font-style: italic;
+                font-size: 18px;
+            }
+
+        }
+    }
+
 };
