--- a/src/components/about-us/about-us.styles.scss
+++ b/src/components/about-us/about-us.styles.scss
@@ -21,14 +21,18 @@
             color: #707070;
             margin-left: 50px;
             margin-right: 30px;
-            margin-top: 100px;
+            margin-top: 70px;
+            line-height: 30px;
+
         }
         .p1 {
             font-size: 16px;
             color: #707070;
             margin-left: 50px;
             margin-right: 30px;
-            margin-top: 230px;
+            margin-top: 200px;
+            line-height: 30px;
+
         }
     }
 
