--- a/src/pages/article-car-page/article-car.styles.scss
+++ b/src/pages/article-car-page/article-car.styles.scss
@@ -1,11 +1,29 @@
 
 .article-car-page {
     font-family: 'Rubik', sans-serif;
-    background-attachment: fixed;
-
-    .car-image {
+    .header {
         width: 100%;
-        height: 100%;
+        height: 400px;
+        background-image: url('../../Assets/images/car-article.jpg');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+
+        .title {
+            font-size: 70px;
+            font-weight: 600;
+            color: #274596;
+            font-style: italic;
+            margin-top: 70px;
+        }
+
+        span {
+            margin-top: 20px;
+            font-size: 120px;
+            font-weight: 600;
+            color: #FFFF01;
+            font-style: italic;
+        }
     }
 
     .article-body {
@@ -13,10 +31,7 @@
         margin-right: 70px;
         margin-top: 70px;
         margin-bottom: 50px;
-
-        // transform-style: preserve-3d;
-        // overflow-y: scroll;
-        // overflow-x: hidden;
+        background-color: white;
 
         p {
             font-size: 16px;
@@ -28,6 +43,9 @@
                 font-size: 18px;
             }
 
+        }
+        .text-highlighted {
+            color: #38A4DD;
         }
     }
 
