--- a/src/pages/article-truck-page/article-truck.styles.scss
+++ b/src/pages/article-truck-page/article-truck.styles.scss
@@ -1,3 +1,52 @@
+   
 .article-truck-page {
     font-family: 'Rubik', sans-serif;
+    .header {
+        width: 100%;
+        height: 400px;
+        background-image: url('../../Assets/images/truck.main.3.jpg');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+
+        .title {
+            font-size: 70px;
+            font-weight: 600;
+            color: #009BFF;
+            font-style: italic;
+            margin-top: 70px;
+        }
+
+        span {
+            margin-top: 20px;
+            font-size: 120px;
+            font-weight: 600;
+            color: #FFFF01;
+            font-style: italic;
+        }
+    }
+
+    .article-body {
+        margin-left: 70px;
+        margin-right: 70px;
+        margin-top: 70px;
+        margin-bottom: 50px;
+        background-color: white;
+
+        p {
+            font-size: 16px;
+            color: #707070;
+            line-height: 40px;
+            .beginning {
+                color: #006AD8;
+                font-style: italic;
+                font-size: 18px;
+            }
+
+        }
+        .text-highlighted {
+            color: #38A4DD;
+        }
+    }
+
 };
