--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -27,13 +27,22 @@ $btn-shadow: 3px 3px 20px $primary-blue;
     
     .message-form {
         margin-top: 50px;
-        margin-left: 5rem;
+        //margin-left: 5rem;
+        @media screen and ( min-width: 576px) {
+            margin-right: 80px;
+        }
+        @media screen and ( max-width: 576px) {
+            margin-left: 30px;
+        }
     }
 
     h1 {
         margin-top: 50px;
         font-size: 20px;
         color: white;
+        @media screen and ( max-width: 576px) {
+            margin-left: 50px;
+        }
     }
 
     h4 {
@@ -43,6 +52,9 @@ $btn-shadow: 3px 3px 20px $primary-blue;
         &:hover {
             color: $bg-navbar;
             cursor: pointer;
+        }
+        @media screen and ( max-width: 576px) {
+            margin-left: 50px;
         }
     }
 
@@ -90,13 +102,16 @@ $btn-shadow: 3px 3px 20px $primary-blue;
         color: white;
         font-size: 12px;
         padding-bottom: 20px;
+        padding-top: 100px;
     }
     .social-icons {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-end;
-        margin-left: 12rem;
+        margin-top: -14rem;
+        margin-left: 28rem;
+        position: absolute;
 
         .telegram {
             margin-top: 50px;
@@ -112,10 +127,16 @@ $btn-shadow: 3px 3px 20px $primary-blue;
                 height: 32px;
             }
         }
+        @media screen and ( max-width: 576px) {
+            margin-left: 26rem;
+        }
     }
     .button-custom {
-        margin-left: 20rem;
+        margin-left: 15rem;
         margin-top: 20px;
         margin-bottom: 100px;
+        @media screen and ( max-width: 576px) {
+            margin-left: 17rem;
+        }
     }
 }
