--- a/src/components/menu-button/menu-button.styles.scss
+++ b/src/components/menu-button/menu-button.styles.scss
@@ -20,9 +20,30 @@ $card-description: 0, 18px, 36px, #000000, 16%; // opacity
 $form-page-color: linear-gradient(to bottom right, #009BFF, #68E7A0);
 $btn-shadow: 3px 3px 20px $primary-blue;
 
-.menu {
-    width: 100%;
-    height: 100%;
-    background-color: $bg-body;
+.menu-button {
 
-}
+    .menu-order-button {
+        width: 100px;
+        height: 40px;
+        border-radius: 7px;
+        background-color: $primary-blue;
+        border-color: $primary-blue;
+        color: white;
+        font-size: 12px;
+        font-weight: 500;
+        box-shadow: 6px 6px 6px #00000017;
+
+        &:hover {
+            background-color: #0082D6;
+            border-color: #0082D6;
+            color: #F2F7FA;
+            cursor: pointer;
+            
+        }
+        &:focus {
+            background-color: #006AD8;
+            border-color: #006AD8;
+            color: #EFF3F6;
+        }
+    }
+    };
