--- a/src/components/search-button/search-button.styles.scss
+++ b/src/components/search-button/search-button.styles.scss
@@ -18,10 +18,9 @@ $neu-morphism: 12px 12px 12px, hsl(0, 1%, 66% ),    //opacity
                 -12px, -12px, 12px rgb(255, 250, 250);
 $card-description: 0, 18px, 36px, #000000, 16%; // opacity
 $form-page-color: linear-gradient(to bottom right, #009BFF, #68E7A0);
-$btn-shadow: 3px 3px 20px #707070;
+$btn-shadow: 3px 3px 20px #7070704f;
 
 .button-search {
-    margin-left: 35px;
     margin-top: 30px;
 
 
