--- a/src/components/search-form/search-form.styles.scss
+++ b/src/components/search-form/search-form.styles.scss
@@ -18,15 +18,29 @@ $neu-morphism: 12px 12px 12px, hsl(0, 1%, 66% ),    //opacity
                 -12px, -12px, 12px rgb(255, 250, 250);
 $card-description: 0, 18px, 36px, #000000, 16%; // opacity
 $form-page-color: linear-gradient(to bottom right, #009BFF, #68E7A0);
+$btn-shadow: 3px 3px 20px $primary-blue;
 
-.header {
+.form-inputs {
     width: 100%;
-    height: 950px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-image: $header-color;
-    @media screen and ( max-width: 576px) {
-        height: 1100px;
+    height: 100%;
+
+    .width-input, .height-input, .radius-input {
+        border-radius: 15px;
+        border: solid 2px $color-footer;
+        width: 220px; 
+        height: 50px;
+        border-color: $color-footer;
+        margin-left: 15px;
+        margin-right: 15px;
+            &:hover {
+                border-color: $bg-navbar;
+                cursor: pointer;
+                &::placeholder {
+                    color: $bg-navbar;
+                }
+            }
+            &:focus {
+                box-shadow: $btn-shadow;
+            }
     }
-}
+};
