styled all button in project

--- a/src/components/button-menu/button-menu.styles.scss
+++ b/src/components/button-menu/button-menu.styles.scss
@@ -32,6 +32,7 @@ $btn-shadow: 3px 3px 20px $primary-blue;
         font-size: 12px;
         font-weight: 500;
         box-shadow: 6px 6px 6px #00000017;
+        border: none;
 
         &:hover {
             background-color: #0082D6;
