--- a/src/components/button-search/button-search.styles.scss
+++ b/src/components/button-search/button-search.styles.scss
@@ -40,6 +40,7 @@ $btn-shadow: 3px 3px 20px #7070704f;
         border-radius: 12px;
         font-size: 10px;
         font-weight: 500;
+        border: none;
 
         &:hover {
             background-color: #FD9275;
