--- a/src/pages/article-car-page/article-car.styles.scss
+++ b/src/pages/article-car-page/article-car.styles.scss
@@ -48,5 +48,8 @@
             color: #38A4DD;
         }
     }
-
+    .back-button-container {
+        margin-left: 66rem;
+        margin-bottom: 50px;
+    }
 };
