--- a/src/pages/article-truck-page/article-truck.styles.scss
+++ b/src/pages/article-truck-page/article-truck.styles.scss
@@ -1,4 +1,4 @@
-   
+
 .article-truck-page {
     font-family: 'Rubik', sans-serif;
     .header {
@@ -47,6 +47,11 @@
         .text-highlighted {
             color: #38A4DD;
         }
+    }
+
+    .back-button-container {
+        margin-left: 66rem;
+        margin-bottom: 50px;
     }
 
 };
