--- a/src/pages/description-page/description-page.styles.scss
+++ b/src/pages/description-page/description-page.styles.scss
@@ -1,3 +1,13 @@
 .description-page {
     font-family: 'Rubik', sans-serif;
+
+    .back-button-container { 
+        margin-left: 56rem;
+        position: absolute;
+    }
+    
+    .green-button-container {
+        margin-left: 65rem;
+        margin-bottom: 50px;
+    }
 };
