--- a/src/components/back-button/back-button.styles.scss
+++ b/src/components/back-button/back-button.styles.scss
@@ -1,8 +1,7 @@
 .back-button {
-    margin-left: 66rem;
-    margin-bottom: 50px;
+    
     .back-button-custom {
-        width: 120px;
+        width: 114px;
         height: 40px;
         border-radius: 7px;
         background-color: #5F84B1;
@@ -10,7 +9,8 @@
         color: white;
         font-size: 12px;
         font-weight: 500;
-        box-shadow: 3px 3px 3px #000000 16%;
+        box-shadow: 3px 3px 6px #00000046;
+        border: none;
         &:hover {
             background-color: #78A3D8;
             border-color: #78A3D8;
@@ -21,6 +21,7 @@
             background-color: #44668F;
             border-color: #44668F;
             color: #F6F9FB;
+            box-shadow: 3px 3px 6px #00000046;
         }
     }
 }
