--- a/src/components/button-form-back/button-form-back.styles.scss
+++ b/src/components/button-form-back/button-form-back.styles.scss
@@ -1,6 +1,6 @@
 .button-form-back {
     .button-custom  {
-        width: 120px;
+        width: 114px;
         height: 40px;
         border-radius: 7px;
         background-color: #39A8E0;
@@ -8,19 +8,24 @@
         color: white;
         font-size: 12px;
         font-weight: 500;
-        box-shadow: 3px 3px 3px rgb(2, 72, 148);
+        box-shadow: 3px 3px 6px #00000046;
+        border: none;
 
         &:hover {
             background-color: #0082D6;
             border-color: #0082D6;
             color: #F2F7FA;
             cursor: pointer;
+            box-shadow: 3px 3px 6px #00000046;
+
             
         }
         &:focus {
             background-color: #006AD8;
             border-color: #006AD8;
             color: #EFF3F6;
+            box-shadow: 3px 3px 6px #00000046;
+
         }
     }
 };
