--- a/src/components/about-us/about-us.styles.scss
+++ b/src/components/about-us/about-us.styles.scss
@@ -6,16 +6,17 @@
         width: 100%;
         height: 307px;
         margin-top: 150px;
+
         .image-first {
             width: 100%;
-            height: 100%;
+            height: 307px;
     }
     }
     .paragraph {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        width: 100%;
+        height: 100%;
+        
+
         .p2 {
             font-size: 16px;
             color: #707070;
@@ -23,7 +24,6 @@
             margin-right: 30px;
             margin-top: 70px;
             line-height: 30px;
-
         }
         .p1 {
             font-size: 16px;
@@ -32,7 +32,6 @@
             margin-right: 30px;
             margin-top: 200px;
             line-height: 30px;
-
         }
     }
 
@@ -43,12 +42,7 @@
 
         .image-second {
             width: 100%;
-            height: 100%;
+            height: 307px;
         }
-    }
-    .p2 {
-        font-size: 16px;
-        margin-top: 80px;
-        color: #707070;
     }
 }
