--- a/src/pages/search-result-page/search-result.styles.scss
+++ b/src/pages/search-result-page/search-result.styles.scss
@@ -6,6 +6,16 @@
         width: 100%;
         height: 500px;
 
+        
+        .title {
+            h1 {
+                font-size: 25px;
+                color: #5F84B1;
+                margin-left: 70px;
+                padding-top: 100px;
+            }
+        }
+
 
         .back-button-container {
             margin-left: 66rem;
