started creating an order-table component, and styling it

--- a/src/components/search-form/search-form.styles.scss
+++ b/src/components/search-form/search-form.styles.scss
@@ -7,7 +7,7 @@ $btn-back: #5F84B1;
 $color-footer: #274596;
 $table-blue: #D6EEFB;
 $table-grey: #DEE7EC;
-$btn-shadow: 3px 3px 20px $primary-blue;
+$btn-shadow: 3px 3px 20px $bg-navbar;
 
 .form-inputs {
     width: 100%;
