--- a/src/components/form-message/form-message.styles.scss
+++ b/src/components/form-message/form-message.styles.scss
@@ -52,6 +52,7 @@ $btn-shadow: 3px 3px 20px $primary-blue;
         .email {
             width: 300px;
             height: 50px; 
+            padding-left: 20px;
             border-radius: 15px;
             border-color: $bg-navbar;
 
@@ -65,13 +66,14 @@ $btn-shadow: 3px 3px 20px $primary-blue;
         .textarea {
             width: 300px;
             height: 80px;
+            padding-top: 15px;
+            padding-left: 20px;
+
             margin-top: 10px;
             border-radius: 15px;
             border-color: $bg-navbar;
             &::placeholder {
                 font-size: 14px;
-                padding-left: 10px;
-                padding-top: 10px;
             }
             @media screen and ( max-width: 410px ) {
                 width: 200px;
@@ -81,11 +83,14 @@ $btn-shadow: 3px 3px 20px $primary-blue;
 
 
         .email, .textarea {
+
             &:hover {
                 border-color: $color-footer;
                 cursor: pointer;
                 &::placeholder {
                     color: $color-footer;
+                    font-style: italic;
+                    font-size: 12px;
                 }
             }
             &:focus {
@@ -93,7 +98,6 @@ $btn-shadow: 3px 3px 20px $primary-blue;
             }
             &::placeholder {
                 font-size: 14px;
-                padding-left: 10px;
                 color: $bg-navbar;
                 font-family: 'Rubik', sans-serif;
             }
