--- a/src/components/social-net-icons/social-net-icons.styles.scss
+++ b/src/components/social-net-icons/social-net-icons.styles.scss
@@ -16,8 +16,9 @@
             margin-top: 20px;
 
             &:hover {
-                width: 32px;
-                height: 32px;
+                padding-left: 10px;
+                cursor: pointer;
+                
             }
         }
     }
