--- a/src/components/form/form.styles.scss
+++ b/src/components/form/form.styles.scss
@@ -3,5 +3,57 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
+    .back-button-custom, .btn-custom  {
+        width: 114px;
+        height: 40px;
+        border-radius: 7px;
+        background-color: #39A8E0;
+        border-color: #39A8E0;
+        color: white;
+        font-size: 12px;
+        font-weight: 500;
+        box-shadow: 3px 3px 6px #00000046;
+        border: none;
+
+        &:hover {
+            background-color: #0082D6;
+            border-color: #0082D6;
+            color: #F2F7FA;
+            cursor: pointer;
+            box-shadow: 3px 3px 6px #00000046;
+
+            
+        }
+        &:focus {
+            background-color: #006AD8;
+            border-color: #006AD8;
+            color: #EFF3F6;
+            box-shadow: 3px 3px 6px #00000046;
+
+        }
+    }
+
+    .full-name, .number, .address {
+        width: 300px;
+        height: 50px;
+        border-radius: 15px;
+        border-color: #009BFF;
+        margin-top: 40px;
+        margin-bottom: 40px;
+
+        &::placeholder {
+            font-size: 14px;
+            color: #009BFF;
+            font-weight: 400;
+        }
+
+        &:hover {
+            border-color: #274596;
+            cursor: pointer;
+            &::placeholder {
+                color: #274596;
+            }
+        }
+    }
 };
