--- a/src/pages/form-page/form-page.styles.scss
+++ b/src/pages/form-page/form-page.styles.scss
@@ -1,10 +1,9 @@
 $form-page-color: linear-gradient(to bottom left, #009BFF, #68E7A0);
-html {
-    width: 100%;
-}
+
 .form-page {
     width: 100%;
     height: 610px;
+    font-family: 'Rubik', sans-serif;
     position: absolute;
     margin: 0;
     background-image: url('../../Assets/images/form-page.img.png');
