--- a/src/pages/description-page/description-page.styles.scss
+++ b/src/pages/description-page/description-page.styles.scss
@@ -10,13 +10,24 @@
         }
     }
 
-    .back-button-container { 
-        margin-left: 56rem;
-        position: absolute;
-    }
-    
-    .green-button-container {
-        margin-left: 65rem;
+    .buttons-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        margin-top: 10rem;
         margin-bottom: 50px;
+        margin-right: 100px;
+
+        
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            .back-button-custom, .btn-back {
+                margin-right: 20px;
+            }
+        }
     }
 };
