--- a/src/pages/order-page/order-page.styles.scss
+++ b/src/pages/order-page/order-page.styles.scss
@@ -4,7 +4,7 @@
     .order-page-body {
         background-color: #EEF9FF;
         width: 100%;
-        height: 800px; //c
+        height: 800px;
 
         .title {
             h1 {
@@ -21,13 +21,13 @@
             flex-direction: row;
             align-items: center;
             justify-content: flex-end;
+            margin-top: 10rem;
             
             .buttons {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-between;
-                margin-bottom: -28rem;
                 .back-button-custom, .btn-back {
                     margin-right: 20px;
                 }
