--- a/src/pages/search-result-page/search-result.styles.scss
+++ b/src/pages/search-result-page/search-result.styles.scss
@@ -18,8 +18,12 @@
 
 
         .back-button-container {
-            margin-left: 66rem;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
             margin-bottom: 50px;
+            margin-right: 100px;
         }
     }
 };
