--- a/src/pages/order-page/order-page.styles.scss
+++ b/src/pages/order-page/order-page.styles.scss
@@ -1,10 +1,15 @@
 .order-page {
     font-family: 'Rubik', sans-serif;
 
+    hr {
+        border: 1px solid #009BFF;
+        margin-top: 50px;
+    }
+
     .order-page-body {
         background-color: #EEF9FF;
         width: 100%;
-        height: 800px;
+        height: 100%;
 
         .title {
             h1 {
@@ -21,7 +26,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: flex-end;
-            margin-top: 10rem;
+            padding-bottom: 50px;
             
             .buttons {
                 display: flex;
