--- a/src/components/about-us/about-us.styles.scss
+++ b/src/components/about-us/about-us.styles.scss
@@ -10,7 +10,8 @@
         .image-first {
             width: 100%;
             height: 307px;
-    }
+            object-fit: cover;
+        }
     }
     .paragraph {
         width: 100%;
@@ -43,6 +44,7 @@
         .image-second {
             width: 100%;
             height: 307px;
+            object-fit: cover;
         }
     }
 }
