--- a/src/components/article-cards/article-cards.styles.scss
+++ b/src/components/article-cards/article-cards.styles.scss
@@ -34,6 +34,7 @@ $form-page-color: linear-gradient(to bottom right, #009BFF, #68E7A0);
         .car-image {
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
         .title {
             font-size: 50px;
@@ -72,7 +73,7 @@ $form-page-color: linear-gradient(to bottom right, #009BFF, #68E7A0);
         .truck-image {
             width: 100%;
             height: 100%;
-            
+            object-fit: cover;
         }
         .title {
             font-size: 50px;
@@ -84,9 +85,7 @@ $form-page-color: linear-gradient(to bottom right, #009BFF, #68E7A0);
             @media screen and ( max-width: 414px ) {
                 font-size: 35px;
                 margin-top: -20rem;
-
             }
-
         }
         span {
             font-size: 70px;
