--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -13,7 +13,11 @@
             .img1 {
                 width: 60%;
                 height: 90%;
+                @media screen and ( max-width: 768px ) {
+                    width: 100%;
+                    height: 100%;
                 }
+            }
         }
 
         .image-holder-2 {
@@ -26,6 +30,10 @@
             .img2 {
                 width: 60%;
                 height: 85%;
+                @media screen and ( max-width: 768px ) {
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }        
         
@@ -39,7 +47,11 @@
             .img3 {
                 width: 60%;
                 height: 90%;
+                @media screen and ( max-width: 768px ) {
+                    width: 100%;
+                    height: 100%;
                 }
+            }
         }        
     }
 
